--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "vue2-postmonger",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Postmonger implementation for the Salesforce Marketing Cloud custom activity development",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "publish": "npm publish"
   },
   "repository": {
     "type": "git",
